# xists

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  demo-eval-report-extended.json  pyproject.toml  repos.txt
.github/workflows/: ci.yml
data/: scale-10k-eval-cases.json  scale-10k-manifest.md  scale-10k-repos.txt  scale-2k-eval-cases.json  scale-2k-manifest.md  scale-2k-repos.txt  scale-cross-domain-dev.json  scale-cross-domain-holdout.json
docs/: demo.md  eval-analysis.md  performance.md  record-schema.md  release.md  retrieval-quality-baseline.md  scale-10k-diagnosis.md  scale-2k-diagnosis.md  scaling-experiment.md  usage.md  v0.6.0-completion.md
examples/: eval-cases-extended.json  eval-cases-smoke.json  eval-cases.json
examples/ci-smoke/: eval-cases.json  eval-report.json  index.json  records.json  repos.txt
scripts/: bench_search.py  check_eval_report.py  compare_retrieval_experiments.py  diagnose_retrieval_candidates.py  generate_cross_domain_eval.py  generate_stratified_eval.py  generate_synthetic_index.py  smoke_check.py  summarize_eval_slices.py
src/xists/: __init__.py  api.py  cli.py  records.py
src/xists/eval/: __init__.py  inspect.py  judge.py  run.py  schema.py
src/xists/ingest/: github.py
src/xists/profile/: __init__.py  llm.py
src/xists/search/: __init__.py  confidence.py  embed.py  index.py  query.py  rerank.py  transform.py
tests/: test_api.py  test_check_eval_report.py  test_cli.py  test_compare_retrieval_experiments.py  test_diagnose_retrieval_candidates.py  test_eval.py  test_examples.py  test_generate_cross_domain_eval.py  test_generate_stratified_eval.py  test_generate_synthetic_index.py  test_github_ingest.py  test_llm_profile.py  test_package.py  test_packaging.py  test_performance_smoke.py  test_query_transform.py  test_rerank.py  test_search.py  test_summarize_eval_slices.py
