[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xists"
version = "0.2.0"
description = "Find what already exists before building from scratch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
xists = "xists.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xists"]
